# infinity-compiler

./: .gitignore  CMakeLists.txt  README.md  main.c  syntax.bnf  syntax.txt  test.inf  test.txt
ast/: ast.c  ast.h
code_generator/: builtin_function_generators.c  builtin_function_generators.h  code_generator.c  code_generator.h  instruction_generators.c  instruction_generators.h  register_handler.c  register_handler.h
code_generator/operator_generators/: operator_generators.c  operator_generators.h
compiler/: compiler.c  compiler.h
config/: console_colors.h  constants.h  globals.c  globals.h  include.asm  options.txt  table_initializers.c  table_initializers.h
examples/: exm1-guess_number.txt  exm2-print_triangle.txt
expression_evaluator/: expression_evaluator.c  expression_evaluator.h  operator_appliers.c  operator_appliers.h
hash_table/: hash_table.c  hash_table.h  table_entry.c  table_entry.h
io/: io.c  io.h
lexer/: lexer.c  lexer.h  token_parsers.c  token_parsers.h
list/: list.c  list.h
logging/: logging.c  logging.h
options_parser/: options_parser.c  options_parser.h
parser/: parser.c  parser.h
scope_stack/: scope_stack.c  scope_stack.h
scope_stack/scope/: scope.c  scope.h
semantic_analyzer/: semantic_analyzer.c  semantic_analyzer.h
symbol_table/: symbol_table.c  symbol_table.h
symbol_table/string_repository/: string_repository.c  string_repository.h  (+2 more)
test_evals/: exp_eval_backup.c  expression_evaluator.c  expression_evaluator.h
token/: token.c  token.h
types/: types.c  types.h
variable/: variable.c  variable.h
(+4 files in other folders)
